--- a/Packages/icr-peppermint-tools/client/components/viewer/segmentationMenu/segmentationMenu.styl
+++ b/Packages/icr-peppermint-tools/client/components/viewer/segmentationMenu/segmentationMenu.styl
@@ -48,7 +48,7 @@
     padding-right: 18px
     padding-left: 18px
     width: 100%
-    overflow-y: scroll
+    overflow-y: auto
     overflow-x: hidden
     word-wrap: break-word
     theme('scrollbar-color', '$textSecondaryColor $uiGrayDarkest')
