--- a/Packages/icr-xnat-roi/client/components/viewer/maskExportListDialogs/maskExportListDialogs.styl
+++ b/Packages/icr-xnat-roi/client/components/viewer/maskExportListDialogs/maskExportListDialogs.styl
@@ -2,16 +2,12 @@
 @import "{icr:peppermint-tools}/client/components/viewer/peppermint-table.styl";
 
 .mask-export-list-dialog
-  theme('border', '1px solid $uiBorderColor', 0.95)
-  theme('background', '$uiGrayDarkest', 0.95)
-  theme('color', '$textSecondaryColor')
+  theme('color', '$textPrimaryColor')
   z-index: 1000
 
-  max-height: calc(100% - 300px)
-  max-width: calc(100% - 100px)
-  position: absolute
+  width: 100%
+  max-height: 100%
   margin: auto
-
 
   padding-right: 10px
   padding-left: 10px
