--- a/Packages/icr-xnat-roi/client/components/viewer/maskImportListDialogs/maskImportListDialogs.styl
+++ b/Packages/icr-xnat-roi/client/components/viewer/maskImportListDialogs/maskImportListDialogs.styl
@@ -1,14 +1,11 @@
 @import "{ohif:design}/app"
 
 .mask-import-list-dialog
-  theme('border', '1px solid $uiBorderColor', 0.95)
-  theme('background', '$uiGrayDarkest', 0.95)
-  theme('color', '$textSecondaryColor')
+  theme('color', '$textPrimaryColor')
   z-index: 1000
 
-  max-height: calc(100% - 300px)
-  max-width: calc(100% - 100px)
-  position: absolute
+  max-height: 100%
+  width: 100%
   margin: auto
 
   padding-right: 10px
