Get metadata and polys, not yet mapped polys.

--- a/StandaloneViewer/StandaloneViewer/client/components/flexboxLayout/flexboxLayout.html
+++ b/StandaloneViewer/StandaloneViewer/client/components/flexboxLayout/flexboxLayout.html
@@ -12,6 +12,7 @@
             <div class="roi-contour-menu">
               {{> React component=RoiContourMenu
                 key=roiContourMenuId
+                ImportCallbackOrComponent=roiContourMenuImportComponent
               }}
             </div>
           {{/if}}
