Fix scrolling of XNAT Nav bar.

--- a/Packages/icr-xnat-roi/client/components/viewer/xnatNavigation/xnatNavigation.styl
+++ b/Packages/icr-xnat-roi/client/components/viewer/xnatNavigation/xnatNavigation.styl
@@ -1,6 +1,6 @@
 @import "{ohif:design}/app"
 
-.xnat-navigation-tree
+.xnat-navigation-window
   theme('color', '$textPrimaryColor')
 
   float: left
@@ -29,34 +29,35 @@
     font-weight: 400
     text-align: left
     theme('color', '$textSecondaryColor')
-    
-  max-height: calc(100%)
-  text-align: left
 
-  display:inline-block
+  .xnat-navigation-tree
+    max-height: calc(100%)
+    text-align: left
 
-  .xnat-nav-button
-    margin-left: 10px
-    margin-right: 10px
+    display:inline-block
 
-  .xnat-nav-button-disabled
-    background-color: grey
-
-  .xnat-nav-horizontal-box
-    display: -webkit-flex
-    display: -ms-flexbox
-    display: flex
-    flex-direction: row
-    align-items: center
-    align-self: flex-start
-
-  ul
-    padding-left: 10px
-    list-style-type: none
-
-    .xnat-nav-session
-      margin-left: 50px
+    .xnat-nav-button
+      margin-left: 10px
       margin-right: 10px
+
+    .xnat-nav-button-disabled
+      background-color: grey
+
+    .xnat-nav-horizontal-box
+      display: -webkit-flex
+      display: -ms-flexbox
+      display: flex
+      flex-direction: row
+      align-items: center
+      align-self: flex-start
+
+    ul
+      padding-left: 10px
+      list-style-type: none
+
+      .xnat-nav-session
+        margin-left: 50px
+        margin-right: 10px
 
   .xnat-nav-shared
     color: #FFCB99
