--- a/StandaloneViewer/StandaloneViewer/client/components/flexboxLayout/flexboxLayout.html
+++ b/StandaloneViewer/StandaloneViewer/client/components/flexboxLayout/flexboxLayout.html
@@ -5,7 +5,7 @@
               {{>studyBrowser (clone this)}}
             {{/if}}
             {{#if leftSidebarChangeSession}}
-            <div>
+            <div class="xnat-navigation-window">
               {{>React component=XNATNavigation}}
             </div>
             {{/if}}
