Fixed multi-frame per-frame imagePlane metadata extraction.

--- a/StandaloneViewer/StandaloneViewer/client/components/standaloneViewer/standaloneViewer.html
+++ b/StandaloneViewer/StandaloneViewer/client/components/standaloneViewer/standaloneViewer.html
@@ -7,7 +7,7 @@
         <svg class="logo-image-icr">
             <use xlink:href={{absoluteUrl "packages/icr_xnat-roi/assets/icons.svg#icon-icr-logo"}}></use>
         </svg>
-        <div class="logo-text">OHIF-XNAT Viewer 2.1.0 ALPHA</div>
+        <div class="logo-text">OHIF-XNAT Viewer 2.0.0</div>
         {{/section}}
         <!-- TODO: options removed for now, may be made more compatible to XNAT-OHIF version in the future.
         {{#section 'headerMenu'}}
